--- a/styles_other.css
+++ b/styles_other.css
@@ -95,6 +95,9 @@ body {
     top: 0px;
     transition: right 0.4s, box-shadow 0.4s;
     -webkit-transition: right 0.4s, box-shadow 0.4s;
+    transition-timing-function: ease-in-out;
+    -webkit-transition-timing-function: ease-in-out;
+    -moz-transition-timing-function: ease-in-out;
     color: white;
     box-shadow: 0px 0px 5px 5px black;
 }
