--- a/menu.css
+++ b/menu.css
@@ -34,7 +34,12 @@
         url(fonts/sourceSansPro.woff2) format('woff2'),
         url(fonts/sourceSansPro.woff) format('woff');
 }
-
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(fonts/roboto.woff2) format('woff2'), url(fonts/roboto.woff) format('woff');
+}
 .sidebar {
     height: 100vh;
     width: 15vw;
