--- a/stylesheet.css
+++ b/stylesheet.css
@@ -439,7 +439,7 @@ input[type=text].plain {
 }
 #email-top {
     width: 100vw;
-    height: 80vh;
+    height: calc(100vh - 75px);
     background-size: 100% auto;
 }
 #email-menu {
@@ -447,4 +447,43 @@ input[type=text].plain {
     width: 100vw;
     height: 75px;
     box-shadow: 0px 2px 2px 0px #7f7f7f;
+    font-size: 0px;
+}
+.email-menu-item {
+    display: inline-block;
+    height: 75px;
+    line-height: 75px;
+    padding-right: 45px;
+    padding-left: 45px;
+    font-family: "Roboto", sans-serif;
+    font-size: 26px;
+    cursor: pointer;
+    transition: background-color 0.4s;
+}
+.email-menu-item:hover {
+    background-color: rgba(255, 255, 255, 0.05);
+}
+#background-name {
+    position: absolute;
+    bottom: 75px;
+    padding-bottom: 10px;
+    padding: 5px;
+    background-color: rgb(208, 51, 37);
+    text-align: center;
+    width: 200px;
+    left: calc(50vw - 100px);
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-left-radius: -8px;
+    font-family: "Source Sans Pro";
+    font-size: 16px;
+}
+.light {
+    color: rgb(105, 105, 105);
+}
+.email-title {
+    color: rgb(187, 62, 50);
+    position: absolute;
+    top: 10px;
+    width: 100%;
 }
