--- a/stylesheet.css
+++ b/stylesheet.css
@@ -467,9 +467,10 @@ input[type=text].plain {
     position: absolute;
     right: 0px;
     bottom: 0px;
-    background-color: rgba(187, 62, 50, 1);
     padding: 10px;
-    border-top-left-radius: 5px;
+    font-family: "Source Sans Pro";
+    font-size: 16px;
+    text-align: right;
 }
 .light {
     color: rgb(105, 105, 105);
@@ -480,4 +481,83 @@ input[type=text].plain {
     position: absolute;
     top: 10px;
     width: 100%;
+}
+#email-codemirror {
+    width: 60vw;
+    height: 80vh;
+    margin-left: 20vw;
+    margin-top: 3px;
+    background-color: white;
+}
+#email-compose {
+    background-color: white;
+    border-left: 1px solid #EEE;
+    border-right: 1px solid #EEE;
+}
+.CodeMirror {
+    background-color: #EEE !important;
+    height: 100% !important;
+}
+#preview-button {
+    position: absolute;
+    top: calc(100vh + 80px);
+    right: calc(20vw + 5px);
+    background-color: rgb(51, 51, 51);
+    padding: 9px;
+    border-radius: 6px;
+    transition: background-color 0.4s;
+    -webkit-transition: background-color 0.4s;
+    color: white;
+    cursor: pointer;
+    z-index: 100000000;
+}
+#preview-button:hover {
+    background-color: rgb(71, 71, 71);
+}
+#email-subject {
+    width: 60vw;
+    margin-left: 20vw;
+    border: none;
+    border-radius: none;
+    border-left: 1px solid #EEE;
+    border-right: 1px solid #EEE;
+    font-size: 32px;
+    font-family: "Open Sans Light";
+}
+#email-preview {
+    position: absolute;
+    left: 20vw;
+    top: calc(100vh + 125px);
+    width: 60vw;
+    height: 80vh;
+    background-color: rgb(51, 51, 51);
+    z-index: 1000000000;
+    color: white;
+    padding: 15px;
+}
+#email-preview > h1 {
+    font-family: "Open Sans Light";
+}
+#email-preview > h2 {
+    font-family: "Open Sans Light";
+}
+#email-preview > h3 {
+    font-family: "Open Sans Light";
+}
+#email-preview > h4 {
+    font-family: "Open Sans Light";
+}
+#email-preview > h5 {
+    font-family: "Open Sans Light";
+}
+#email-preview > h6 {
+    font-family: "Open Sans Light";
+}
+#email-preview > pre {
+    background-color: rgb(61, 61, 61) !important;
+    border: none !important;
+    color: white;
+}
+#email-preview > pre > code {
+    
 }
