--- a/stylesheet.css
+++ b/stylesheet.css
@@ -561,3 +561,40 @@ input[type=text].plain {
 #email-preview > pre > code {
     
 }
+#email-friend-chooser {
+    position: absolute;
+    width: 40vw;
+    left: 30vw;
+    background-color: white;
+    top: 120vh;
+    background-color: rgb(51, 51, 51);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    z-index: 2000000000;
+}
+#email-friend-chooser:before {
+    content: "Choose a friend";
+    background-color: rgb(208, 51, 37);
+    color: black;
+    font-size: 32px;
+    width: 100%;
+    display: block;
+    font-family: "Open Sans Light";
+    padding: 4px;
+    padding-bottom: 5px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+.email-friend {
+    color: white;
+    font-family: "Source Sans Pro";
+    font-size: 20px;
+    padding: 4px;
+    cursor: pointer;
+    transition: background-color 0.4s;
+    border-left: 0px solid rgb(208, 51, 37);
+    border-left-width: 0px;
+}
+.email-friend:hover {
+    background-color: rgba(255, 255, 255, 0.1);
+}
